--- a/client/views/home_private/home_private.html
+++ b/client/views/home_private/home_private.html
@@ -37,8 +37,8 @@
       <th>Sat</th>
     </thead>
     <tr id="row1">
-      <td id="date1" class = "{{#if meo1}}{{meo1}}{{/if}}">{{#if getDay}}{{getDay 1}}{{/if}}</td>
-      <td id="date2" class = "{{#if meo2}}{{meo2}}{{/if}}">{{#if getDay}}{{getDay 2}}{{/if}}</td>
+      <td id="date1" class = "{{#if meo1}}{{meo1}}{{/if}}">{{#if getDay}}{{getDay d=1}}{{/if}}</td>
+      <td id="date2" class = "{{#if meo2}}{{meo2}}{{/if}}">{{#if getDay}}{{getDay d=2}}{{/if}}</td>
       <td id="date3" class = "{{#if meo3}}{{meo3}}{{/if}}">{{#if getDay}}{{getDay 3}}{{/if}}</td>
       <td id="date4" class = "{{#if meo4}}{{meo4}}{{/if}}">{{#if getDay}}{{getDay 4}}{{/if}}</td>
       <td id="date5" class = "{{#if meo5}}{{meo5}}{{/if}}">{{#if getDay}}{{getDay 5}}{{/if}}</td>
