--- a/client/views/home_private/home_private.html
+++ b/client/views/home_private/home_private.html
@@ -37,13 +37,13 @@
       <th>Sat</th>
     </thead>
     <tr id="row1">
-      <td id="date1" class = "{{#if meo1}}{{meo1}}{{/if}}">{{#if getDay}}{{getDay d=1}}{{/if}}</td>
-      <td id="date2" class = "{{#if meo2}}{{meo2}}{{/if}}">{{#if getDay}}{{getDay d=2}}{{/if}}</td>
-      <td id="date3" class = "{{#if meo3}}{{meo3}}{{/if}}">{{#if getDay}}{{getDay 3}}{{/if}}</td>
-      <td id="date4" class = "{{#if meo4}}{{meo4}}{{/if}}">{{#if getDay}}{{getDay 4}}{{/if}}</td>
-      <td id="date5" class = "{{#if meo5}}{{meo5}}{{/if}}">{{#if getDay}}{{getDay 5}}{{/if}}</td>
-      <td id="date6" class = "{{#if meo6}}{{meo6}}{{/if}}">{{#if getDay}}{{getDay 6}}{{/if}}</td>
-      <td id="date7" class = "{{#if meo7}}{{meo7}}{{/if}}">{{#if getDay}}{{getDay 7}}{{/if}}</td>
+      <td id="date1" class = "{{#if meo1}}{{meo1}}{{/if}}">{{getDay 1}}</td>
+      <td id="date2" class = "{{#if meo2}}{{meo2}}{{/if}}">{{getDay 2}}</td>
+      <td id="date3" class = "{{#if meo3}}{{meo3}}{{/if}}">{{getDay 3}}</td>
+      <td id="date4" class = "{{#if meo4}}{{meo4}}{{/if}}">{{getDay 4}}</td>
+      <td id="date5" class = "{{#if meo5}}{{meo5}}{{/if}}">{{getDay 5}}</td>
+      <td id="date6" class = "{{#if meo6}}{{meo6}}{{/if}}">{{getDay 6}}</td>
+      <td id="date7" class = "{{#if meo7}}{{meo7}}{{/if}}">{{getDay 7}}</td>
     </tr>
     <tr id="row2">
       <!-- them  class = "{{#if meo2}}{{meo2}}{{/if}}" voi meo8 tuong ung voi so tren id-->
