add save calendar registed

--- a/client/views/home_private/home_private.html
+++ b/client/views/home_private/home_private.html
@@ -8,7 +8,7 @@
 				<div id="page_menu" class="pull-right">
 
 				</div> -->
-                 {{>calendar}}
+          {{>calendar}}
 			</div>
 		</div>
 	</div>
@@ -92,5 +92,5 @@
       <td id="date42" class = "{{#if meo42}}{{meo42}}{{/if}}">{{getDay 42}}</td>
     </tr>
   </table>
-  <button class = "btn btn-md btn-success">Save</button>
+  <button id = "save" class = "btn btn-md btn-success">Save</button>
 </template>
