--- a/client/views/menuManage/menu.html
+++ b/client/views/menuManage/menu.html
@@ -23,12 +23,12 @@
 			<div>
 				<h3>Danh sách các món đã chọn: </h3>
 				{{>dishChosen}}
+				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 			</div>
-			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 			<div>
 				<hr>
-				<h3>Nhà bếp còn lại: </h3>
+				<h3 style = "width: 100%; background-color: red;position: relative">Nhà bếp còn lại: </h3>
 				{{>alldish}}
 			</div>
 			
