--- a/client/views/home_private/home_private.html
+++ b/client/views/home_private/home_private.html
@@ -15,6 +15,7 @@
 </template>
 
 <template name = "calendar">
+  {{initcolor}}
     <div style = "width: 400px;margin: 20px auto">
         <div style = "display: inline-block;background-color: #D0D0D0;">
             <button class = "btn btn-md btn-warning" style = "margin: 0;" id = "premonth"> « </button>
