--- a/client/views/addDish/insertDish/insert.html
+++ b/client/views/addDish/insertDish/insert.html
@@ -60,7 +60,7 @@
       				</div>
       				<div class = "col-sm-1">
       					<label  class = "control-label col-sm-1" for= "pwd">
-							<button  id = "addElement" type="button" class="btn" onclick="javascript:taothanhphan();">+</button>
+							<button  id = "addElement" type="button" class="btn">+</button>
 						</label>
       				</div>
 				</div>
