--- a/client/views/login/login.html
+++ b/client/views/login/login.html
@@ -14,12 +14,12 @@
 			<button class="btn btn-lg btn-primary btn-block" type="submit" data-loading-text="Please wait...">
 				Sign in
 			</button>
-			<p class="account-form-text-after" id="register-link">
+			<!-- <p class="account-form-text-after" id="register-link">
 				Not a member?
 				<a href="{{pathFor 'register'}}">
 					Sign up here
 				</a>
-			</p>
+			</p> -->
 			<p class="account-form-text-after" id="forgot-password-link">
 				Forgot password?
 				<a href="{{pathFor 'forgot_password'}}">
