--- a/client/styles/theme/themefix.import.less
+++ b/client/styles/theme/themefix.import.less
@@ -25,36 +25,35 @@
 
 .hcheckbox{
 	position: relative;
-	left: 0px;
-	top: -10px;
+	left: 20px;
 	background-color: red;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	-ms-transform: scale(3); /* IE */
-	-moz-transform: scale(3); /* FF */
-	-webkit-transform: scale(3); /* Safari and Chrome */
-	-o-transform: scale(3); /* Opera */
+	-ms-transform: scale(2); /* IE */
+	-moz-transform: scale(2); /* FF */
+	-webkit-transform: scale(2); /* Safari and Chrome */
+	-o-transform: scale(2); /* Opera */
 
 }
-table td thead{
+.calendar thead{
 	border: 1px solid black;
 }
 
-table, td, th {
+.rowcalendar td{
     border: 1px solid green;
 }
 
-th {
+.calendar thead th {
     background-color: green;
     color: white;
 }
-td{
+.rowcalendar td{
 	width: 100px;
     height: 85px;
     text-align: center;
     font-size: 1.4em;
     /*font-weight: bold;*/
 }
-th{
+.calendar th{
 	text-align: center;
 	height: 30px;
 }
