--- a/client/views/home_private/home_private.html
+++ b/client/views/home_private/home_private.html
@@ -8,14 +8,25 @@
 				<div id="page_menu" class="pull-right">
 
 				</div> -->
-          {{>calendar}}
+                {{>calendar}}
 			</div>
 		</div>
+        <div class="col-md-12">
+            <!-- {{>ForAdmin}} -->
+            {{> bigbuttonregister}}
+            <!-- {{>menuforuser}} -->
+        </div>
 	</div>
 </template>
 
+<template name = "ForAdmin">
+    {{checkMenuWeek}}
+</template>
+
 <template name = "calendar">
-  {{initcolor}}
+    {{initcolor}}
+    <h2>Lịch đăng ký</h2>
+    <hr><br>
     <div style = "width: 400px;margin: 20px auto">
         <div style = "display: inline-block;background-color: #D0D0D0;">
             <button class = "btn btn-md btn-warning" style = "margin: 0;" id = "premonth"> « </button>
@@ -26,8 +37,10 @@
         <div style = "display: inline-block;background-color: #D0D0D0;">
             <button class = "btn btn-md btn-warning" id = "nextMonth" > » </button>
         </div>
+
+        <button id = "save" style = "margin-left: 40px;" class = "btn btn-md btn-success">Save</button>
     </div>
-  <table class = "table table-striped table-hover">
+  <table class = "table table-striped table-hover calendar">
     <thead id="weekRow">
       <th id = "sun">Sun</th>
       <th id = "mon">Mon</th>
@@ -37,7 +50,7 @@
       <th id = "fri">Fri</th>
       <th id = "sat">Sat</th>
     </thead>
-    <tr id="row1">
+    <tr id="row1" class = "rowcalendar">
       <td id="date1" class = "{{#if meo1}}{{meo1}}{{/if}}">{{getDay 1}}</td>
       <td id="date2" class = "{{#if meo2}}{{meo2}}{{/if}}">{{getDay 2}}</td>
       <td id="date3" class = "{{#if meo3}}{{meo3}}{{/if}}">{{getDay 3}}</td>
@@ -46,7 +59,7 @@
       <td id="date6" class = "{{#if meo6}}{{meo6}}{{/if}}">{{getDay 6}}</td>
       <td id="date7" class = "{{#if meo7}}{{meo7}}{{/if}}">{{getDay 7}}</td>
     </tr>
-    <tr id="row2">
+    <tr id="row2" class = "rowcalendar">
       <!-- them  class = "{{#if meo2}}{{meo2}}{{/if}}" voi meo8 tuong ung voi so tren id-->
       <td id="date8" class = "{{#if meo8}}{{meo8}}{{/if}}">{{getDay 8}}</td>
       <td id="date9" class = "{{#if meo9}}{{meo9}}{{/if}}">{{getDay 9}}</td>
@@ -56,7 +69,7 @@
       <td id="date13" class = "{{#if meo13}}{{meo13}}{{/if}}">{{getDay 13}}</td>
       <td id="date14" class = "{{#if meo14}}{{meo14}}{{/if}}">{{getDay 14}}</td>
     </tr>
-    <tr id="row3">
+    <tr id="row3" class = "rowcalendar">
       <td id="date15" class = "{{#if meo15}}{{meo15}}{{/if}}">{{getDay 15}}</td>
       <td id="date16" class = "{{#if meo16}}{{meo16}}{{/if}}">{{getDay 16}}</td>
       <td id="date17" class = "{{#if meo17}}{{meo17}}{{/if}}">{{getDay 17}}</td>
@@ -64,8 +77,8 @@
       <td id="date19" class = "{{#if meo19}}{{meo19}}{{/if}}">{{getDay 19}}</td>
       <td id="date20" class = "{{#if meo20}}{{meo20}}{{/if}}">{{getDay 20}}</td>
       <td id="date21" class = "{{#if meo21}}{{meo21}}{{/if}}">{{getDay 21}}</td>
-    </tr>
-    <tr id="row4">
+    </tr >
+    <tr id="row4" class = "rowcalendar">
       <td id="date22" class = "{{#if meo22}}{{meo22}}{{/if}}">{{getDay 22}}</td>
       <td id="date23" class = "{{#if meo23}}{{meo23}}{{/if}}">{{getDay 23}}</td>
       <td id="date24" class = "{{#if meo24}}{{meo24}}{{/if}}">{{getDay 24}}</td>
@@ -74,7 +87,7 @@
       <td id="date27" class = "{{#if meo27}}{{meo27}}{{/if}}">{{getDay 27}}</td>
       <td id="date28" class = "{{#if meo28}}{{meo28}}{{/if}}">{{getDay 28}}</td>
     </tr>
-    <tr id="row5">
+    <tr id="row5" class = "rowcalendar">
       <td id="date29" class = "{{#if meo29}}{{meo29}}{{/if}}">{{getDay 29}}</td>
       <td id="date30" class = "{{#if meo30}}{{meo30}}{{/if}}">{{getDay 30}}</td>
       <td id="date31" class = "{{#if meo31}}{{meo31}}{{/if}}">{{getDay 31}}</td>
@@ -83,7 +96,7 @@
       <td id="date34" class = "{{#if meo34}}{{meo34}}{{/if}}">{{getDay 34}}</td>
       <td id="date35" class = "{{#if meo35}}{{meo35}}{{/if}}">{{getDay 35}}</td>
     </tr>
-    <tr id="row6">
+    <tr id="row6" class = "rowcalendar">
       <td id="date36" class = "{{#if meo36}}{{meo36}}{{/if}}">{{getDay 36}}</td>
       <td id="date37" class = "{{#if meo37}}{{meo37}}{{/if}}">{{getDay 37}}</td>
       <td id="date38" class = "{{#if meo38}}{{meo38}}{{/if}}">{{getDay 38}}</td>
@@ -93,5 +106,43 @@
       <td id="date42" class = "{{#if meo42}}{{meo42}}{{/if}}">{{getDay 42}}</td>
     </tr>
   </table>
-  <button id = "save" class = "btn btn-md btn-success">Save</button>
+</template>
+
+
+
+<template name = "menuforuser">
+    <div class = "col-sm-4">
+        <label for="date">
+        </label>
+        <input class="form-control" id="date" type="date" value= {{getTomorrow}}>
+    </div>
+    <div class = "col-sm-2">
+        <label for = "show">
+        </label>
+        <button type = "button" id = "show" class = "btn btn-success form-control">Show</button>
+    </div>
+    <hr>
+    {{#each alledishforuser}}
+        {{> edishforuser}}
+    {{/each}}
+</template>
+
+<template name = "edishforuser">
+    <div class = "col-sm-12 hdish">
+        <img src="images/images.jpg" >
+        <!-- <input class="hcheckbox check" id="xx" type="checkbox" value="hh" name="category"/> -->
+        <p class = "h3">{{name}}</p>
+        <p class = "h3">{{cost}}</p>
+        
+    </div>
+
+</template>
+
+<template name = "bigbuttonregister">
+    <h2>Đăng ký nhanh</h2>
+    <hr><br>
+    <div style = "width: 300px; height: 300px; position: relative; border-radius:300px;margin: 100px auto">
+    <img src="images/no.jpg" style = "height: 100%; width: 100%">
+    <h3> Bạn đã đăng ký ăn ngày</h3>
+    </div>
 </template>
