--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -107,6 +107,31 @@
 				Home
 			</a>
 		</li>
+		<li id="menu-item-simple" class="{{menuItemClass 'manageMenu'}}">
+			<a href="{{pathFor 'manageMenu'}}">
+				Quản lý thực đơn
+			</a>
+		</li>
+		<li id="menu-item-simple" class="{{menuItemClass 'addDish'}}">
+			<a href="{{pathFor 'addDish'}}">
+				Thêm món ăn
+			</a>
+		</li>
+		<li id="menu-item-simple" class="{{menuItemClass 'createAcount'}}">
+			<a href="{{pathFor 'createAcount'}}">
+				Tạo tài khoản
+			</a>
+		</li>
+		<li id="menu-item-simple" class="{{menuItemClass 'statistical'}}">
+			<a href="{{pathFor 'statistical'}}">
+				Thống kê
+			</a>
+		</li>
+		<li id="menu-item-simple" class="{{menuItemClass 'pay'}}">
+			<a href="{{pathFor 'pay'}}">
+				Thanh toán
+			</a>
+		</li>
 	</ul>
 </template>
 
