--- a/client/views/menuManage/menu.html
+++ b/client/views/menuManage/menu.html
@@ -28,7 +28,7 @@
 
 			<div>
 				<hr>
-				<h3 style = "width: 100%; background-color: red;position: relative">Nhà bếp còn lại: </h3>
+				<h3 style = "width: 100%;position: relative">Nhà bếp còn lại: </h3>
 				{{>alldish}}
 			</div>
 			
