--- a/client/styles/theme/themefix.import.less
+++ b/client/styles/theme/themefix.import.less
@@ -48,7 +48,7 @@
 }
 .rowcalendar td{
 	width: 100px;
-    height: 85px;
+    height: 65px;
     text-align: center;
     font-size: 1.4em;
     /*font-weight: bold;*/
@@ -59,5 +59,5 @@
 }
 
 .haha{
-	background-color: red;
+	background-color: #64FE2E;
 }
