--- a/client/styles/theme/themefix.import.less
+++ b/client/styles/theme/themefix.import.less
@@ -13,6 +13,32 @@
 	border-radius: 10px;
 	border: 4px solid #FE2E2E;	
 }
+.hdishuser{
+	height: 60%;
+	width: 91%;
+	margin: 1% 1% 1% 1%;
+}
+
+
+.hdishuser img{
+	position: relative;
+	width: 350px;
+	margin-top: 0%;
+	height: 300px;
+	padding: 0 0 0 0;
+	top: -0px;
+	border-radius: 10px;
+	border: 4px solid #FE2E2E;	
+}
+
+.hdishuser p{
+	width: 100%;
+	height: 140%;
+	padding: 0% 0% 1% 0%;
+	text-align: center;
+	margin: 0% 0 1% 0;
+	color: #FE2E2E;
+}
 
 .hdish p{
 	width: 100%;
