--- a/client/views/home_public/home_public.html
+++ b/client/views/home_public/home_public.html
@@ -11,7 +11,7 @@
 </template>
 
 <template name="HomePublicHomeJumbotron">
-	<div class="jumbotron ">
+	<!-- <div class="jumbotron ">
 		<div id="content" class="container">
 			<h1 id="component-title">
 				[ABC]
@@ -25,6 +25,6 @@
 				</a>
 			</p>
 		</div>
-	</div>
+	</div> -->
 </template>
 
