--- a/client/views/user_settings/profile/profile.html
+++ b/client/views/user_settings/profile/profile.html
@@ -51,102 +51,6 @@
 					</span>
 				</div>
 			</div>
-			<div class="form-group  field-profile-facebook">
-				<label for="profile.facebook">
-					Facebook URL
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.facebook" value="{{current_user_data.profile.facebook}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
-			<div class="form-group  field-profile-google">
-				<label for="profile.google">
-					Google+ URL
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.google" value="{{current_user_data.profile.google}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
-			<div class="form-group  field-profile-twitter">
-				<label for="profile.twitter">
-					Twitter ID
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.twitter" value="{{current_user_data.profile.twitter}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
-			<div class="form-group  field-profile-website">
-				<label for="profile.website">
-					Website URL
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.website" value="{{current_user_data.profile.website}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
-			<div class="form-group  field-profile-phone">
-				<label for="profile.phone">
-					Phone
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.phone" value="{{current_user_data.profile.phone}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
-			<div class="form-group  field-profile-ordinal-number">
-				<label for="profile.ordinalNumber">
-					Ordinal number
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.ordinalNumber" value="{{current_user_data.profile.ordinalNumber}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
-			<div class="form-group  field-profile-room-number">
-				<label for="profile.roomNumber">
-					Room number
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.roomNumber" value="{{current_user_data.profile.roomNumber}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
-			<div class="form-group  field-profile-website">
-				<label for="profile.website">
-					Website URL
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.website" value="{{current_user_data.profile.website}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
 			<div class="form-group  field-profile-image">
 				<label for="profile.image">
 					Image
@@ -159,45 +63,9 @@
 					</span>
 				</div>
 			</div>
-			<div class="form-group  field-profile-rate">
-				<label for="profile.rate">
-					Rate
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.rate" value="{{current_user_data.profile.rate}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
-			<div class="form-group  field-profile-account-type">
-				<label for="profile.accountType">
-					Types of accounts
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.accountType" value="{{current_user_data.profile.accountType}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
-			<div class="form-group  field-profile-note">
-				<label for="profile.note">
-					Note
-				</label>
-				<div class="input-div">
-					<input type="text" name="profile.note" value="{{current_user_data.profile.note}}" class="form-control">
-					<span id="help-text" class="help-block">
-					</span>
-					<span id="error-text" class="help-block">
-					</span>
-				</div>
-			</div>
 			<div class="form-group  field-profile-created-at">
 				<label for="profile.createdAt">
-					Created At
+					Address
 				</label>
 				<div class="input-div">
 					<input type="text" name="profile.createdAt" value="{{current_user_data.profile.createdAt}}" class="form-control">
